--- a/Project_report/Project_report.Rmd
+++ b/Project_report/Project_report.Rmd
@@ -14,7 +14,6 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   results = 'asis',
-  echo = FALSE,
   warning = FALSE,
   message = FALSE,
   fig.align = 'center'
@@ -32,47 +31,48 @@ load("../data/jobs_data_merged.Rdata")
 
 
 # Introduction
-(todo - personal introduction...) Andreas - Psychology inspired Human-Factors researcher.
+Andreas - Psychology inspired Human-Factors researcher.
 
 # My Project
 Online job advertisements are now being used around the world as a source of insight into the nature of our rapidly changing labour markets. However, before we can determine what inferences are appropriate form the data and used it for informing decisions about labour markets, is is importatnt to check the quality and potential bias of this datasource. Our goal is to understand the strengths and weaknesses of online job advertisements as a source of information about changing demand for workers and skills.
-We here present one example of this data characterisation process: a comparison of two online job ad datasets: Adzuna Australia (a dataset we used in the wider project) database and the Internet Vacancy Index (a dataset collected by The Department of Jobs and Small Business). Both of these dataset collect online job ads from different sources (online job ads portals). 
+We here present one example of this data characterisation process: a comparison of two online job ad datasets: Adzuna Australia (a dataset we used in the wider project) database and the Internet Vacancy Index (IVI - a dataset collected by The Department of Jobs and Small Business). Both of these dataset collect online job ads from different sources (online job ads portals). 
 
-## Preliminary results
+#Results
 
-### IVI and Adzuna job ds count - collapsed over all jobs and GCCSAs
+## Adzuna and IVI job ads counts 2015 - 2019
 
-#### Plot
+Figure \@ref(fig:plotAll) compares job ad counts from both data sets over time. The IVI data applies a three-month rolling average filter. The red line shows the original (unfiltered) Adzuna Australia data, the green line the same data with a three-month rolling average filter. As expected, the latter corresponds better with the IVI data (also see \ref@(tab:corrAll)). Therefore we will only consider the filtered Adzuna Australia data for further visualisation and analysis.
 
-```{r plotCollapsed, out.width='60%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - collapsed over all jobs and GCCSAs"}
+```{r plotAll, out.width='60%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - collapsed over all jobs and GCCSAs"}
 
-df_merged_long_collapsed <- df_merged_long %>%
+df_merged_long_all <- df_merged_long %>%
   group_by(Month, source) %>%
   #  filter(source !="Adzuna_count") %>%
   summarise(count = sum(count))
 
-ggplot(df_merged_long_collapsed, aes(x = Month, y = count, colour = source)) +
+ggplot(df_merged_long_all, aes(x = Month, y = count, colour = source)) +
     geom_line() +
-    geom_point() +
-    labs(title = "Comparison of Adzuna and IVI counts (all occupations) per GCCSA",
+    geom_point(shape = 1) +
+    labs(title = "Comparison of Adzuna and IVI counts 2015 - 2019",
        x = "Date") +
     theme(axis.text.x = element_text(angle = 45, hjust = 1),
         plot.title = element_text(hjust = 0.5),
-        text = element_text(size=7))
-#  transition_reveal(Month)
-
+        text = element_text(size=7)) +
+##add animation
+    transition_reveal(Month)
+##stop animation after frist loop
 # animate(p, renderer = gifski_renderer(loop = F))
 
 ```
 
 #### Correlation
 
-```{r corrAll, out.width='100%', echo = T}
+```{r corrAll, out.width='70%', echo = T}
 
 cor_collapsed <- round(cor(df_merged[, c(4,5,7)]),2)
 
 knitr::kable(cor_collapsed, format = "html", caption = "Correlations IVI and Adzuna job ads count - collapsed over all jobs and GCCSAs") %>% 
-  kable_styling("striped")
+  kable_styling("striped", full_width = F)
 
 ```
 
@@ -80,74 +80,166 @@ knitr::kable(cor_collapsed, format = "html", caption = "Correlations IVI and Adz
 
 #### Plots
 
+To get another perspective of the comparison the counts from the two datasets over time, we scatter plot the data and with a LOESS curve (locally estimated scatterplot smoothing) to assess temporal trends. Figure \@ref(fig:plotGCCSA) shows data per GCCSA (Greater Capital City Statistical Area for all states and Terrirories. 
+
 ```{r plotGCCSA, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - GCCSA"}
 
 df_merged_long_GCCSA <- df_merged_long %>%
   filter(source != "Adzuna_count") %>%
   group_by(Month, GCCSA, source) %>%
-#  filter(source !="Adzuna_count") %>%
   summarise(count = sum(count))
 
 ggplot(df_merged_long_GCCSA, aes(x = Month, y = count, colour = source)) +
-  geom_line() +
-  labs(title = "Comparison of Adzuna and IVI counts (all occupations) per GCCSA",
-       x = "Date") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1),
-      plot.title = element_text(hjust = 0.5),
-      text = element_text(size=7)) +
-  facet_wrap(~GCCSA, scales = "free_y")
-
-```
-
-#### Correlation
-
-```{r corrGCCSA, out.width='100%', echo=FALSE}
-
-df_merged_GCCSA <- df_merged %>%
-  group_by(Month, GCCSA) %>%
-  summarise(Adzuna_mav = sum(Adzuna_mav),
-            IVI_count = sum(IVI_count))
-
-corr_GCCSA <- cor.test(df_merged_GCCSA$Adzuna_mav, df_merged_GCCSA$IVI_count)
-corr_GCCSA
-
-```
-
-Correlation is `print(corr_GCCSA$estimate)`
-
-Plots for occupations (collapsed over GCCSAs)
-```{r plotOccupations, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - Occupations"}
-df_merged_long_occupation <- df_merged_long %>%
-  group_by(Month, ANZSCO_TITLE, source) %>%
-  summarise(count = sum(count))
-
-ggplot(df_merged_long_occupation, aes(x = Month, y = count, colour = source)) +
-  geom_line() +
+  geom_point(shape = 1, alpha = 0.7) +
+  geom_smooth(method = 'loess') +
   labs(title = "Comparison of Adzuna and IVI counts (all occupations) per GCCSA",
        x = "Date") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1),
         plot.title = element_text(hjust = 0.5),
         text = element_text(size=7)) +
+  facet_wrap(~GCCSA, scales = "free_y")
+
+```
+
+#### Correlation
+Table \@ref(tab:corrGCCSA) shows correlation between Adzuna and IVI job ads counts over time per GCCSA. 
+
+```{r corrGCCSA, out.width='50%', echo=FALSE}
+df_merged_GCCSA <- df_merged %>%
+  group_by(Month, GCCSA) %>%
+  summarise(Adzuna_mav_count = sum(Adzuna_mav_count),
+            IVI_count = sum(IVI_count))
+
+correlations_GCCSA <- data.frame(state=character(),
+                           metro=numeric(), 
+                           rural=numeric(),
+                           stringsAsFactors=FALSE)
+correlations_GCCSA[1,1] <- "NSW"
+correlations_GCCSA[1,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Sydney"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[1,3] <- with(df_merged_GCCSA %>% filter(GCCSA == "Rest of NSW"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[2,1] <- "VIC"
+correlations_GCCSA[2,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Melbourne"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[2,3] <- with(df_merged_GCCSA %>% filter(GCCSA == "Rest of Vic."), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[3,1] <- "QLD"
+correlations_GCCSA[3,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Brisbane"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[3,3] <- with(df_merged_GCCSA %>% filter(GCCSA == "Rest of Qld"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[4,1] <- "SA"
+correlations_GCCSA[4,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Adelaide"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[4,3] <- with(df_merged_GCCSA %>% filter(GCCSA == "Rest of SA"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[5,1] <- "WA"
+correlations_GCCSA[5,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Perth"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[5,3] <- with(df_merged_GCCSA %>% filter(GCCSA == "Rest of WA"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[6,1] <- "TAS"
+correlations_GCCSA[6,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Hobart"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[6,3] <- with(df_merged_GCCSA %>% filter(GCCSA == "Rest of Tas."), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[7,1] <- "NT"
+correlations_GCCSA[7,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Darwin"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[7,3] <- with(df_merged_GCCSA %>% filter(GCCSA == "Rest of NT"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_GCCSA[8,1] <- "ATC"
+correlations_GCCSA[8,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Australian Capital Territory"), round(cor(Adzuna_mav_count, IVI_count), 2))
+
+knitr::kable(correlations_GCCSA, format = "html", caption = "Correlations IVI and Adzuna job ads count - GCCSAs") %>%
+  kable_styling("striped", full_width = F)
+```
+
+
+
+Plots for occupations (collapsed over GCCSAs)
+```{r plotOccupations, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - Occupations"}
+df_merged_long_occupation <- df_merged_long %>%
+  filter(source != "Adzuna_count") %>%
+  group_by(Month, ANZSCO_TITLE, source) %>%
+  summarise(count = sum(count))
+
+ggplot(df_merged_long_occupation, aes(x = Month, y = count, colour = source)) +
+  geom_point(shape = 1, alpha = 0.7) +
+  geom_smooth(method = 'loess') +
+  labs(title = "Comparison of Adzuna and IVI counts (all GCCSAa) per occupation",
+       x = "Date") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        plot.title = element_text(hjust = 0.5),
+        text = element_text(size=7)) +
   facet_wrap(~ANZSCO_TITLE, scales = "free_y")
+```
+
+#### Correlation Occupation
+Table \@ref(tab:corrOccupation) shows correlation between Adzuna and IVI job ads counts over time per major ANZCO occupational group 
+
+```{r corrOccupation, out.width='100%'}
+df_merged_occupation <- df_merged %>%
+  group_by(Month, ANZSCO_TITLE) %>%
+  summarise(Adzuna_mav_count = sum(Adzuna_mav_count),
+            IVI_count = sum(IVI_count))
+
+correlations_occupation <- data.frame("Occupation"=character(), 
+                                      "Correlation"=numeric(),
+                                      stringsAsFactors=FALSE)
+
+correlations_occupation[1,1] <- "Managers"
+correlations_occupation[1,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Managers"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_occupation[2,1] <- "Professionals"
+correlations_occupation[2,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Professionals"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_occupation[3,1] <- "Technicians and Trades Workers"
+correlations_occupation[3,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Technicians and Trades Workers"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_occupation[4,1] <- "Community and Personal Service Workers"
+correlations_occupation[4,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Community and Personal Service Workers"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_occupation[5,1] <- "Clerical and Administrative Workers"
+correlations_occupation[5,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Clerical and Administrative Workers"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_occupation[6,1] <- "Sales Workers"
+correlations_occupation[6,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Sales Workers"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_occupation[7,1] <- "Machinery Operators and Drivers"
+correlations_occupation[7,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Machinery Operators and Drivers"), round(cor(Adzuna_mav_count, IVI_count), 2))
+correlations_occupation[8,1] <- "Labourers"
+correlations_occupation[8,2] <- with(df_merged_occupation %>% filter(ANZSCO_TITLE == "Labourers"), round(cor(Adzuna_mav_count, IVI_count), 2))
+
+knitr::kable(correlations_occupation, format = "html", caption = "Correlations IVI and Adzuna job ads count - occupation") %>%
+  kable_styling("striped", full_width = F)
+```
+
+
+Plots of correlation between IVI and Adzuna data over time for all GCCSAs and occupations; See Figure \@ref(fig:plotCorrelations)
+
+```{r plotCorrelations, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count detailed correlations"}
+
+df_merged %>%
+  group_by(GCCSA, ANZSCO_TITLE) %>%
+  summarise(correlation = cor(Adzuna_mav_count, IVI_count)) %>%
+  mutate(correlation = round(correlation, 2)) %>%
+  ggplot(aes(x = ANZSCO_TITLE, y = correlation)) +
+    geom_bar(stat="identity", alpha = 0.5) + 
+    geom_text(aes(label = correlation), nudge_y = 0.2, colour = "blue", size = 1.8) +
+    theme(axis.text.x = element_text(angle = 75, hjust = 1),
+        plot.title = element_text(hjust = 0.5),
+        text = element_text(size=7)) +
+    facet_wrap(~GCCSA)
 
 ```
 
 
+Overall comparsion (data aggregated over time) of Adzuna Australia and IVI counts for all of GCCSAs and occupations.
+
+```{r plotGCCSAvsOccupations, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="Overall Adzuna and job ads count - GCCSAs and Occupations"}
+  df_merged_long %>%
+    filter(source != "Adzuna_count")%>%
+    group_by(GCCSA, ANZSCO_TITLE, source) %>%
+    summarise(count = sum(count)) %>%
+  ggplot(aes(x=GCCSA, y = ANZSCO_TITLE, colour = source))+
+  geom_jitter(aes(size = count), alpha = 0.5, width = 0.1, height = 0.1) +
+  #geom_point(aes(size = count), alpha = 0.3) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        plot.title = element_text(hjust = 0.5),
+        text = element_text(size=7))
+
+````
+
 # My time went ...
 
-What parts of the project took the most time and effort? Were there any surprising challenges you
-encountered, and how did you solve them?
+...by mostly with trying to figure out nitty gritty details and why some of my code does not work (e.g. don't use an underscore for naming r chunks in Markdown etc.); and yes, continuous iterations of tidying, visualising, analysing, tidying...
 
 # Next steps
 
-What further steps do you wish your project could take? Or are there any new digital skills that you
-are keen to develop as a result of your involvement in the Data School?
+My next challenge (apoart from honing my R skills) will be getting into Python.
 
 # My Data School Experience
 
-This poster is mostly about your synthesis project. However we would also like to hear about other
-parts of your Data School experience. What aspects of the program did you really enjoy? How have you
-been applying the skills you have learned in your daily work? Have you been able to transfer this 
-knowledge to your team members? Concrete examples demonstrating this would be useful here
-(meetings/talks/collaborations/new roles). Any descriptions of the personal impact the program has 
-had are welcome here as well!
+Although is was a considerable time investment and often challenging with managing project and other work, attending Data School gave me time to practise my (emerging) R skills. Overall it was a positive expereince.
