Updates to readme and markdown

--- a/Project_report/Project_report.Rmd
+++ b/Project_report/Project_report.Rmd
@@ -34,14 +34,14 @@ load("../data/jobs_data_merged.Rdata")
 Andreas - Psychology inspired Human-Factors researcher.
 
 # My Project
-Online job advertisements are now being used around the world as a source of insight into the nature of our rapidly changing labour markets. However, before we can determine what inferences are appropriate form the data and used it for informing decisions about labour markets, is is importatnt to check the quality and potential bias of this datasource. Our goal is to understand the strengths and weaknesses of online job advertisements as a source of information about changing demand for workers and skills.
-We here present one example of this data characterisation process: a comparison of two online job ad datasets: Adzuna Australia (a dataset we used in the wider project) database and the Internet Vacancy Index (IVI - a dataset collected by The Department of Jobs and Small Business). Both of these dataset collect online job ads from different sources (online job ads portals). 
+Online job advertisements are now being used around the world as a source of insight into the nature of our rapidly changing labour markets. However, before we can determine what inferences are appropriate form the data and we can use the data for informing decisions about labour markets, is is important to check the quality and potential bias of this datasource. Our goal of the wider project this report is part of, is to understand the strengths and weaknesses of online job advertisements as a source of information about changing demand for workers and skills.
+We here present one example of this data characterisation process: a comparison of two online job ad datasets: Adzuna Australia job  ads data (a dataset we are using to create an online skills dashbaord) and the Internet Vacancy Index (IVI - a dataset collected by The Department of Jobs and Small Business). Both of these dataset collect online job ads from different sources (online job ads portals). 
 
-#Results
+# Results
 
-## Adzuna and IVI job ads counts 2015 - 2019
+## Comparison of overall Adzuna Australia and IVI job ads counts between 2015 - 2019
 
-Figure \@ref(fig:plotAll) compares job ad counts from both data sets over time. The IVI data applies a three-month rolling average filter. The red line shows the original (unfiltered) Adzuna Australia data, the green line the same data with a three-month rolling average filter. As expected, the latter corresponds better with the IVI data (also see \ref@(tab:corrAll)). Therefore we will only consider the filtered Adzuna Australia data for further visualisation and analysis.
+Figure \@ref(fig:plotAll) compares job ad counts from both data sets over time. The IVI data applies a three-month rolling average filter. The red line shows the original (unfiltered) Adzuna Australia data and the green line the same data with a three-month rolling average filter. As expected, the latter corresponds better with the IVI data (also see \ref@(tab:corrAll)). Therefore, we will only use  the filtered Adzuna Australia data for further visualisation and analysis.
 
 ```{r plotAll, out.width='60%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - collapsed over all jobs and GCCSAs"}
 
@@ -65,8 +65,6 @@ ggplot(df_merged_long_all, aes(x = Month, y = count, colour = source)) +
 
 ```
 
-#### Correlation
-
 ```{r corrAll, out.width='70%', echo = T}
 
 cor_collapsed <- round(cor(df_merged[, c(4,5,7)]),2)
@@ -76,11 +74,9 @@ knitr::kable(cor_collapsed, format = "html", caption = "Correlations IVI and Adz
 
 ```
 
-### GCCSAs (aggregated over occupations)
+## Comparison of Adzuna Australia and IVI job ads counts per GCCSAs
 
-#### Plots
-
-To get another perspective of the comparison the counts from the two datasets over time, we scatter plot the data and with a LOESS curve (locally estimated scatterplot smoothing) to assess temporal trends. Figure \@ref(fig:plotGCCSA) shows data per GCCSA (Greater Capital City Statistical Area for all states and Terrirories. 
+To get another perspective of the comparison the counts from the two datasets over time, we scatter plot the data and with a LOESS curve (locally estimated scatterplot smoothing) to assess temporal trends. Figure \@ref(fig:plotGCCSA) shows data per GCCSA (Greater Capital City Statistical Area for all states and Territories. 
 
 ```{r plotGCCSA, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - GCCSA"}
 
@@ -90,7 +86,7 @@ df_merged_long_GCCSA <- df_merged_long %>%
   summarise(count = sum(count))
 
 ggplot(df_merged_long_GCCSA, aes(x = Month, y = count, colour = source)) +
-  geom_point(shape = 1, alpha = 0.7) +
+  geom_point(shape = 1, size = 1, alpha = 0.7) +
   geom_smooth(method = 'loess') +
   labs(title = "Comparison of Adzuna and IVI counts (all occupations) per GCCSA",
        x = "Date") +
@@ -101,7 +97,6 @@ ggplot(df_merged_long_GCCSA, aes(x = Month, y = count, colour = source)) +
 
 ```
 
-#### Correlation
 Table \@ref(tab:corrGCCSA) shows correlation between Adzuna and IVI job ads counts over time per GCCSA. 
 
 ```{r corrGCCSA, out.width='50%', echo=FALSE}
@@ -111,8 +106,8 @@ df_merged_GCCSA <- df_merged %>%
             IVI_count = sum(IVI_count))
 
 correlations_GCCSA <- data.frame(state=character(),
-                           metro=numeric(), 
-                           rural=numeric(),
+                           capital_city=numeric(), 
+                           rest_of_state=numeric(),
                            stringsAsFactors=FALSE)
 correlations_GCCSA[1,1] <- "NSW"
 correlations_GCCSA[1,2] <- with(df_merged_GCCSA %>% filter(GCCSA == "Greater Sydney"), round(cor(Adzuna_mav_count, IVI_count), 2))
@@ -143,16 +138,18 @@ knitr::kable(correlations_GCCSA, format = "html", caption = "Correlations IVI an
 ```
 
 
+## Comparison of Adzuna Australia and IVI job ads counts per occupation
 
-Plots for occupations (collapsed over GCCSAs)
-```{r plotOccupations, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - Occupations"}
+Figure \@ref(fig:plotOccupation) compares job ad counts of Adzuna Australia and IVI job ads counts over time per major occupational group (unsing ANZCO - Australian and New Zealand Standard Classification of Occupations). Again, we scatter plot the data and with a LOESS curve. 
+
+```{r plotOccupation, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count - Occupations"}
 df_merged_long_occupation <- df_merged_long %>%
   filter(source != "Adzuna_count") %>%
   group_by(Month, ANZSCO_TITLE, source) %>%
   summarise(count = sum(count))
 
 ggplot(df_merged_long_occupation, aes(x = Month, y = count, colour = source)) +
-  geom_point(shape = 1, alpha = 0.7) +
+  geom_point(shape = 1, size = 1, alpha = 0.7) +
   geom_smooth(method = 'loess') +
   labs(title = "Comparison of Adzuna and IVI counts (all GCCSAa) per occupation",
        x = "Date") +
@@ -162,8 +159,8 @@ ggplot(df_merged_long_occupation, aes(x = Month, y = count, colour = source)) +
   facet_wrap(~ANZSCO_TITLE, scales = "free_y")
 ```
 
-#### Correlation Occupation
-Table \@ref(tab:corrOccupation) shows correlation between Adzuna and IVI job ads counts over time per major ANZCO occupational group 
+
+Table \@ref(tab:corrOccupation) shows correlation between Adzuna Australia and IVI job ads counts over time per major ANZCO occupational group.
 
 ```{r corrOccupation, out.width='100%'}
 df_merged_occupation <- df_merged %>%
@@ -196,8 +193,9 @@ knitr::kable(correlations_occupation, format = "html", caption = "Correlations I
   kable_styling("striped", full_width = F)
 ```
 
+## Comparisons of Adzuna Australia and IVI job ads counts per GCCSA and occupation
 
-Plots of correlation between IVI and Adzuna data over time for all GCCSAs and occupations; See Figure \@ref(fig:plotCorrelations)
+Next we plot detailed correlations between the data sources over time for all GCCSAs and occupations (see Figure \@ref(fig:plotCorrelations)).
 
 ```{r plotCorrelations, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="IVI and Adzuna job ads count detailed correlations"}
 
@@ -215,8 +213,7 @@ df_merged %>%
 
 ```
 
-
-Overall comparsion (data aggregated over time) of Adzuna Australia and IVI counts for all of GCCSAs and occupations.
+And finally we perform an overall comparsion (data aggregated over time) of Adzuna Australia and IVI job ads counts for all of GCCSAs and occupations (see \@ref(fig:plotGCCSAvsOccupations)).
 
 ```{r plotGCCSAvsOccupations, out.width='100%', fig.align='center', fig.height= 4, fig.width=6, fig.cap="Overall Adzuna and job ads count - GCCSAs and Occupations"}
   df_merged_long %>%
@@ -232,6 +229,12 @@ Overall comparsion (data aggregated over time) of Adzuna Australia and IVI count
 
 ````
 
+# Summary / Discussion:
+The main take-away points from the above data comparisons are:
+* Low correlation between datasets over time within a given geographic location. Correlations for rst of state are generally higher than for capital city areas.
+* Moderate to low correlations over time for sales workers, professionals, managers, and clerical and administrative workers. No correlation for machinery operators and drivers, and negative correlations for technicians and trades Workers as well as community and personal service workers.	Especially these negative correlations are surprising and need to be investigated further. 
+* When drilling down into occupations by GCCSA over time or aggregated over time it no easy to interpret patterns emerge. For some of these combinations the data correspoens better than for others. However, such detailed data might still be valuable for some and assist in informing if or how much such specific job ads data can be relied on for specific decisions.
+
 # My time went ...
 
 ...by mostly with trying to figure out nitty gritty details and why some of my code does not work (e.g. don't use an underscore for naming r chunks in Markdown etc.); and yes, continuous iterations of tidying, visualising, analysing, tidying...
@@ -242,4 +245,4 @@ My next challenge (apoart from honing my R skills) will be getting into Python.
 
 # My Data School Experience
 
-Although is was a considerable time investment and often challenging with managing project and other work, attending Data School gave me time to practise my (emerging) R skills. Overall it was a positive expereince.
+Although is was a considerable time investment and often challenging with managing project and other work, attending Data School gave me time to practise my (emerging) R skills.
